# scenecutremover

./: CMakeLists.txt  README.md  filter.sh
src/: cvtest.cpp
src/new/: SceneRemover.cpp  SceneRemover.hpp
